@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>johann@j-schmitz.net</email>
-		<name>Johann Schmitz (ercpe)</name>
-	</maintainer>
-	<use>
-		<flag name="redis">Allows using redis as a cache store</flag>
-	</use>
+  <maintainer>
+    <email>johann@j-schmitz.net</email>
+    <name>Johann Schmitz (ercpe)</name>
+  </maintainer>
+  <use>
+    <flag name="redis">Allows using redis as a cache store</flag>
+  </use>
+  <upstream>
+    <remote-id type="github">ionrock/cachecontrol</remote-id>
+  </upstream>
 </pkgmetadata>
-
